--- a/lab6_2/app/src/main/AndroidManifest.xml
+++ b/lab6_2/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Lab6_2">
+        android:theme="@style/Theme.Lab6_2"
+        android:name=".ExecutorServiceBasedApplication">
         <activity
             android:name=".MainActivity"
             android:exported="true">
